--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 body
 {
-    background-color: #587ee9;
+    background-color: #43AFFC;
     display: flex;
     padding:0px 5px;
     justify-content: center;
